--- a/.gitignore
+++ b/.gitignore
@@ -413,6 +413,7 @@ pip-selfcheck.json
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,visualstudiocode,python,django,venv,virtualenv
 
+.env
 
 
 __pycache__/
