--- a/.env
+++ b/.env
@@ -2,18 +2,18 @@ SECRET_KEY=abc
 DEBUG=True
 
 # Databse credentials
-DATABASE_ENGINE=django.db.backends.postgresql
-DATABASE_NAME=astro
-DATABASE_USER=postgres
-DATABASE_PASSWORD=qwer
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
+DATABASE_ENGINE=
+DATABASE_NAME=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_HOST=
+DATABASE_PORT=
 
 CELERY_BROKER_URL=redis://127.0.0.1:6379
 CACHE_BROKER_URL=redis://127.0.0.1:6379/1
 
 # creds for sending email service
-EMAIL_HOST=sandbox.smtp.mailtrap.io
-EMAIL_HOST_USER=aaea48213879d3
-EMAIL_HOST_PASSWORD=31aed4f86b21fb
-EMAIL_PORT=2525
+EMAIL_HOST=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+EMAIL_PORT=
